Font, color header fixes
Using variable colors named in css
Using variable font in css
Extra margin for research group to show Chevron

--- a/assets/scss/gomri.scss
+++ b/assets/scss/gomri.scss
@@ -47,6 +47,9 @@
     --color-main: var(--color-teal);
     --color-menu: var(--color-lightBlue);
 
+    --color-primary: var(--color-dark-green);
+    --color-secondary: var(--color-dark-cyan);
+
     --atlassion-button-main: var(--color-teal);
     --atlassion-button-bg: var(--color-dark-cyan);
     --color-table-striped:  var(--color-light-cyan);
