--- a/assets/scss/hri.scss
+++ b/assets/scss/hri.scss
@@ -83,6 +83,8 @@
   --color-headerBottom:var(--color-blue--blueBird);
   --color-main:var(--color-blue--blueBird);
   --color-menu:var(--color-blue--boston);
+  --color-primary: var(--color-blue--blueBird);
+  --color-secondary: var(--color-blue--boston);
   --color-table-striped:var(--color-brown--tan);
   --atlassion-button-main:var(--color-blue--blueBird);
   --atlassion-button-bg:var(--color-blue--boston);
